--- a/style.css
+++ b/style.css
@@ -1,18 +1,45 @@
 body {
    margin: 0;
    font-family: "Roboto", serif;
+   display: flex;
+   justify-content: space-between;
+   flex-direction: column;
+   margin: 0px;
+   padding:0px:
 
-
-
-    
   }
 
   .header {
     background-color: #1f2937;
     display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 128px 64px;
   }
 
-  .header > ul{
+  .header-links {
+    display: flex;
+    gap:32px;
+    font-size: 18px;
+    color: #E5E7EB;
+  }
+
+  .header-logo {
+    color: white;
+    font-size:24px;
+  }
+
+  .header-links > ul{
+    list-style-type: none;
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    gap:32px;
+  }
+
+  a{
+    color: white;
     list-style-type: none;
     list-style: none;
     text-decoration: none;
@@ -24,9 +51,11 @@ body {
   .container1 {
     background-color: #1f2937;
     color: white;
+    gap:24px;
+    padding:16px 128px 64px;
     display:flex;
     justify-content: space-between;
-    padding:200px;
+    align-items: center;
     /*
     padding-left: 200px;
     padding-right: 200px;
@@ -36,6 +65,7 @@ body {
   .c1container {
     display:flex;
     flex-direction: column;
+    gap:16px;
     flex: 0 0 400px;
   }
   .c1header{
@@ -50,7 +80,7 @@ body {
   }
 
   .c1button {
-    font-family: Roboto, sans-serif;
+    font-family: "Roboto", sans-serif;
     border: none;
     border-radius: 8px;
     background: #eee;
@@ -65,9 +95,125 @@ body {
   }
 
   .c1picture > img {
-    max-width: 300px;
-    max-height: 200px;
-    flex: 0 0;
+    max-width: 400px;
+    max-height: auto;
+    margin:0;
+    padding:0;
   }
 
 /* This is a CSS comment */
+.container2 {
+  background-color: white;
+  gap:24px;
+  padding:24px 96px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  }
+
+  .c2text{
+  font-size: 36px;
+  color: #1F2937;
+  font-weight: 900;
+  text-align: center;
+  margin: 32px 0;
+}
+
+.all-plants {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  text-align: center;
+}
+
+.picture > img{ 
+  max-width: 100px;
+  max-height: 100px;
+}
+
+
+/* This is a CSS comment */
+
+.container3 {
+background-color: #E5E7EB;
+color: #1F2937;
+gap:24px;
+padding:24px 200px;
+display:flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+padding: 64px 25%;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  color:#1F2937 ;
+}
+
+.thor {
+align-self: flex-end;
+font-weight: bold;;
+}
+
+/* This is a CSS comment */
+
+.container4 {
+  background-color: #3882F6;
+  gap:24px;
+  margin: 32px 180px;
+  padding:24px 96px;
+  flex-basis: 100px;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  color: white;
+  }
+
+  .c4alltext {
+    background-color: #3882F6;
+    gap:0px;
+    display:flex;
+    justify-content: left;
+    align-items: left;
+    flex-direction: column;
+
+    }
+
+  .c4call {
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .c4text{
+    font-size: 24x;
+
+  }
+
+  .c4button {
+    text:white;
+    background-color: #3882F6;
+    border-color: white;
+    height: 30px;
+    width: 100px;
+    border-width: 2px;
+    border-radius: 8px;
+  
+  }
+  
+
+  /* This is a CSS comment */
+
+  .footer {
+    background-color: #1f2937;
+    color: white;
+    gap:24px;
+    padding:24px 96px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
